<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_vertical"
    android:layout_marginStart="8dp"
    android:layout_marginEnd="8dp"
    tools:context=".ui.signup.SignupActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:gravity="center_horizontal"
        android:text="@string/app_name"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:layout_marginBottom="32dp"
        android:gravity="center_horizontal"
        android:text="@string/student_registration_activity_subtitle"/>

    <EditText
        android:id="@+id/name_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:hint="@string/username_hint"/>
    <EditText
        android:id="@+id/email_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:hint="@string/email_hint"/>
    <EditText
    android:id="@+id/password_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:inputType="textPassword"
    android:hint="@string/password_hint" />
    <EditText
        android:id="@+id/password_confirm_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="@string/confirm_password_hint" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="4dp"
        android:layout_marginTop="8dp">
        <TextView
            android:layout_width="0dp"
            android:layout_weight="4"
            android:layout_height="wrap_content"
            android:text="@string/gender_spinner_lable"/>
        <Spinner
            android:id="@+id/gender_spinner"
            android:layout_width="0dp"
            android:layout_weight="5"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:entries="@array/gender_spinner_entries">
        </Spinner>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="8dp">
        <TextView
            android:layout_width="0dp"
            android:layout_weight="4"
            android:layout_height="wrap_content"
            android:text="@string/city_spinner_label"/>
        <Spinner
            android:id="@+id/city_spinner"
            android:layout_width="0dp"
            android:layout_weight="5"
            android:layout_height="wrap_content"
            android:entries="@array/students_cities">
        </Spinner>
    </LinearLayout>
    <Button
        android:id="@+id/signup_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/signup_button_label"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        android:layout_marginTop="16dp">
        <TextView
            android:id="@+id/result"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:text="@string/login_activity_link_pretext"/>
        <TextView
            android:id="@+id/login_view"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:clickable="true"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:text="@string/login_activity_link_text"
            android:focusable="true" />
    </LinearLayout>
</LinearLayout>