<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_vertical"
    android:layout_marginStart="8dp"
    android:layout_marginEnd="8dp"
    tools:context=".ui.forgotpassword.ForgotPasswordActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/title_text"
        android:gravity="center_horizontal"
        android:text="@string/app_name"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/subtitle_text"
        android:layout_marginBottom="32dp"
        android:gravity="center_horizontal"
        android:text="@string/forgot_password_activity_subtitle"/>

    <EditText
        android:id="@+id/email_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        style="@style/row_primary_color"
        android:hint="@string/email_hint"/>
    <Button
        android:id="@+id/reset_password_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        style="@style/row_primary_color.button"
        android:text="@string/reset_password_hint"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        android:layout_marginTop="16dp">
        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            style="@style/label_text"
            android:text="@string/login_view_link_text"/>
        <TextView
            android:id="@+id/login_view"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:clickable="true"
            style="@style/link_text"
            android:text="@string/login_view_link"
            android:focusable="true" />
    </LinearLayout>
</LinearLayout>