<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_vertical"
    android:layout_marginStart="8dp"
    android:layout_marginEnd="8dp"
    tools:context=".ui.login.LoginActivity">
    <include
        android:id="@+id/progressbar"
        layout="@layout/progress_wrapper"
        android:visibility="gone"/>
    <TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:textAppearance="@style/TextAppearance.AppCompat.Display1"
    android:textColor="@color/colorPrimary"
    android:gravity="center_horizontal"
    android:text="@string/app_name"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/colorPrimary"
        android:layout_marginBottom="32dp"
        android:gravity="center_horizontal"
        android:text="@string/student_login_activity_subtitle"/>
    <EditText
        android:id="@+id/email_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/row_primary_color"
        android:inputType="textEmailAddress"
        android:hint="@string/email_hint"/>
    <EditText
        android:id="@+id/password_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/row_primary_color"
        android:inputType="textPassword"
        android:hint="@string/password_hint" />
    <RadioGroup
        android:id="@+id/user_type_radio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal">
        <RadioButton
            android:id="@+id/user_type_student"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Student"/>
        <RadioButton
            android:id="@+id/user_type_tutor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Tutor"/>
    </RadioGroup>
    <Button
        android:id="@+id/login_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/row_primary_color.button"
        android:layout_gravity="center_horizontal"
        android:text="@string/login_hint"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        android:layout_marginTop="16dp">
        <TextView
            android:id="@+id/result"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            style="@style/label_text"
            android:text="@string/signup_activity_link_pertext"/>
        <TextView
            android:id="@+id/register_view"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:clickable="true"
            style="@style/link_text"
            android:text="@string/signup_activity_link_text"
            android:focusable="true" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        android:layout_marginTop="16dp">
        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            style="@style/label_text"
            android:text="@string/forgot_password_activity_link_pretext"/>
        <TextView
            android:id="@+id/forgot_password_view"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:clickable="true"
            style="@style/link_text"
            android:text="@string/forgot_password_activity_link_text"
            android:focusable="true" />
    </LinearLayout>
</LinearLayout>