<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_marginStart="4dp">

    <TextView android:id="@+id/label_gender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/label_text"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/gender_filter_label" />
    <RadioGroup android:id="@+id/gender_radio_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/row_primary_color"
        android:orientation="horizontal">
        <RadioButton
            android:id="@+id/male_filter"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/male_radio_button_label" />
        <RadioButton
            android:id="@+id/female_filter"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/female_radio_button_label" />
    </RadioGroup>

    <TextView android:id="@+id/label_city"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/label_text"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/city_spinner_label_text" />
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    style="@style/row_primary_color"
    android:orientation="vertical">
    <Spinner
        android:id="@+id/city_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/students_cities" />
</LinearLayout>



    <TextView android:id="@+id/label_qualification"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/label_text"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="Select Qualification" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/row_primary_color"
        android:orientation="vertical">
    <Spinner
        android:id="@+id/degree_name_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/degree_names" />
    </LinearLayout>

    <TextView android:id="@+id/label_subject"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/label_text"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="Select Subject" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/row_primary_color"
        android:orientation="vertical">
    <Spinner
        android:id="@+id/subject_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/degree_subjects" />
    </LinearLayout>

    <TextView android:id="@+id/label_fee"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/label_text"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="Enter Per Hour Fee" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/row_primary_color"
        android:orientation="vertical">
    <EditText
        android:id="@+id/fee_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:background="@color/white"
        android:hint="Enter Fee" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
        android:id="@+id/button_clear_filters"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
            android:enabled="false"
            style="@style/row_primary_color.button"
        android:text="@string/clear_filters_button_label" />

    <Button
        android:id="@+id/button_apply_filters"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/row_primary_color.button"
        android:text="@string/apply_filters_button_label" />
    </LinearLayout>
</LinearLayout>